--- a/Graphics.vcxproj.filters
+++ b/Graphics.vcxproj.filters
@@ -75,5 +75,8 @@
     <ClCompile Include="Source\Graphics\Sandcore.Graphics.Texture.2D.Array.ixx">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Graphics\Sandcore.Graphics.Texture.2D.Cubemap.ixx">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
