--- a/Graphics.vcxproj
+++ b/Graphics.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Source\Graphics\Sandcore.Graphics.Camera.ixx" />
     <ClCompile Include="Source\Graphics\Sandcore.Graphics.Framebuffer.ixx" />
     <ClCompile Include="Source\Graphics\Sandcore.Graphics.Debug.ixx" />
+    <ClCompile Include="Source\Graphics\Sandcore.Graphics.Image.Gradient.ixx" />
     <ClCompile Include="Source\Graphics\Sandcore.Graphics.Mesh.ixx" />
     <ClCompile Include="Source\Graphics\Sandcore.Graphics.Mesh.Vertex.ixx" />
     <ClCompile Include="Source\Graphics\Sandcore.Graphics.OpenGL.hpp" />
@@ -167,6 +168,7 @@
     <ClCompile Include="Source\Graphics\Sandcore.Graphics.Window.ixx" />
     <ClCompile Include="Source\Graphics\Sandcore.System.Clock.ixx" />
     <ClCompile Include="Source\Graphics\Sandcore.Graphics.Texture.2D.Array.ixx" />
+    <ClCompile Include="Source\Graphics\Sandcore.System.Timer.ixx" />
     <ClCompile Include="Source\main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
