--- a/Graphics/Graphics.vcxproj.filters
+++ b/Graphics/Graphics.vcxproj.filters
@@ -57,9 +57,6 @@
     <ClCompile Include="Source\Graphics\Sandcore.Graphics.Texture.3D.ixx">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\glm\glm.ixx">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Graphics\Sandcore.Graphics.Debug.ixx">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
@@ -82,6 +79,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="Source\Graphics\Sandcore.System.Timer.ixx">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Libraries\glm\glm.ixx">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
